--- a/dashboard.html
+++ b/dashboard.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,24 +8,127 @@
     <title>Career Counselling</title>
     <link rel="stylesheet" href="dashboard.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
+
+
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script> -->
+
+
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+
 </head>
+
 <body>
-    <header>
-        <div class="logo">
-            <a href="#">Career Counselling</a>
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+        crossorigin="anonymous"></script>
+
+
+    <section class="nav-bar">
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="dashboard.html">Career Counselling</a>
+                <button class="navbar-toggler" 
+                    type="button" 
+                    data-bs-toggle="collapse" 
+                    data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" 
+                    aria-expanded="false" 
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link active" aria-current="page"
+                                href="dashboard.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#courses">Courses</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#jobs">Jobs</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                        <!-- <li class="nav-item">
+                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+              </li> -->
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </section>
+
+
+
+    <!-- --------------------content section----------------- -->
+    <section class="container-fluid" id="content">
+        <h1>Career Counselling</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis praesentium tenetur molestias aliquam
+            quo adipisci?</p>
+        <button class="btn btn-outline-primary btn-lg" type="submit">Join Us</button>
+    </section>
+
+    <!-- -------------courses section------------ -->
+    <section class="container-fluid" id="courses">
+        <h1>Courses</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis praesentium tenetur molestias aliquam
+            quo adipisci?</p>
+        <input type="text" placeholder="Search Courses...">
+    </section>
+
+    <!-- -------------jobs section------------ -->
+    <section class="container-fluid" id="jobs">
+        <h1>Jobs</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis praesentium tenetur molestias aliquam
+            quo adipisci?</p>
+        <input type="text" placeholder="Search Jobs...">
+    </section>
+
+
+    <!-- ----------------Contact Us------------- -->
+    <section id="contact">
+        <div class="container">
+            <h1>Contact Us</h1>
+            <div class="row">
+                <div class="col-md-6">
+                    <form class="contact-form">
+                        <div class="form-group">
+                            <input type="text" class="form-control mb-2" placeholder="Enter Your Name">
+                        </div>
+                        <div class="form-group">
+                            <input type="email" class="form-control mb-2" placeholder="Enter Your E-mail">
+                        </div>
+                        <div class="form-group">
+                            <input type="number" class="form-control mb-2" placeholder="Enter Your Phone No.">
+                        </div>
+                        <div class="form-group">
+                            <textarea class="form-control mb-2" rows="4" placeholder="Enter Your Message"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary mb-2">Send Message</button>
+                    </form>
+                </div>
+                <div class="col-md-6 contact-info">
+                    <div class="follow"><b>Address:</b><i class="fa fa-map-marker"></i>GMC Sialkot</div>
+                    <div class="follow"><b>E-mail:</b><i class="fa fa-envelope"></i>CareerCounselling@gmail.com</div>
+                    <div class="follow"><b>Phone:</b><i class="fa fa-phone"></i>+923001234567</div>
+                    <div class="follow"><label><b>Social Links:</b></label>
+                        <a href="#"><i class="fa fa-youtube-play"></i></a>
+                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-instagram"></i></a>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="searchbox">
-            <input type="text" placeholder="What do you want to Learn?">
-            <i class="fa fa-search"></i>
+    </section>
+
+
+    <section class="footer">
+        <div class="container text-center">
+            <p>© 2021 Career Counselling • Built with Team Mates</p>
         </div>
-        <div class="menu">
-            <ul>
-                <li><a href="#">All Courses</a></li>
-                <li><a href="#">Certificates</a></li>
-                <li><a href="#">Sign Up</a></li>
-                <li><a href="#">Login</a></li>
-            </ul>
-        </div>
-    </header>
+    </section>
 </body>
+
 </html>
