--- a/dashboard.html
+++ b/dashboard.html
@@ -8,7 +8,21 @@
     <title>Career Counselling</title>
     <link rel="stylesheet" href="dashboard.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"> -->
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <!-- One advantage of using the Bootstrap 4 CDN: -->
+
 
 
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
@@ -24,27 +38,22 @@
 
 <body>
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+    <!-- Option 1: Bootstrap5 Bundle with Popper -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script> -->
 
 
     <section class="nav-bar">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="dashboard.html">Career Counselling</a>
-                <button class="navbar-toggler" 
-                    type="button" 
-                    data-bs-toggle="collapse" 
-                    data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" 
-                    aria-expanded="false" 
-                    aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
+                    <ul class="navbar-nav ml-auto">
                         <li class="nav-item"><a class="nav-link active" aria-current="page"
                                 href="dashboard.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="#courses">Courses</a></li>
@@ -86,10 +95,59 @@
     </section>
 
 
+
+    <!-- ------------About Us------------- -->
+    <section class="about-us">
+        <div class="container">
+            <h1 class="text-center text-primary">About Us</h1>
+            <p class="text-center">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi est possimus
+                reiciendis quae qui, maiores blanditiis incidunt enim ducimus nulla.</p>
+            <div class="row">
+                <div class="col-md-4 text-center">
+                    <div class="profile">
+                        <img src="img/nomi.jpeg" class="user" alt="">
+                        <blockquote>I'm Graduate BS-IT and also Front-End Developer using HTML, CSS, JavaScript, Bootstrap 5 and Jquery.</blockquote>
+                        <h3>Muhammad Naeem Abbas: <span>Front-End</span></h3>
+
+                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-instagram"></i></a>
+
+                    </div>
+                </div>
+                <div class="col-md-4 text-center">
+                    <div class="profile">
+                        <img src="img/umer.png" class="user" alt="">
+                        <blockquote>I'm Graduate BS-IT and also Back-End Developer using Python (jengo linrary).</blockquote>
+                        <h3>Umar QayYum: <span>Back-End Work</span></h3>
+
+                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-instagram"></i></a>
+
+                    </div>
+                </div>
+                <div class="col-md-4 text-center">
+                    <div class="profile">
+                        <img src="img/nisar.jpeg" class="user" alt="">
+                        <blockquote>I'm Graduate BS-IT and also IOS Developer using Flutter. </blockquote>
+                        <h3>Nisar QayYum: <span>IOS Developer</span></h3>
+
+                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-instagram"></i></a>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <!-- ----------------Contact Us------------- -->
     <section id="contact">
         <div class="container">
-            <h1>Contact Us</h1>
+            <h1 class="text-primary text-center">Contact Us</h1>
             <div class="row">
                 <div class="col-md-6">
                     <form class="contact-form">
