--- a/dashboard.html
+++ b/dashboard.html
@@ -8,7 +8,6 @@
     <title>Career Counselling</title>
     <link rel="stylesheet" href="dashboard.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"> -->
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -24,12 +23,6 @@
     <!-- One advantage of using the Bootstrap 4 CDN: -->
 
 
-
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script> -->
-
-
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
@@ -38,16 +31,10 @@
 
 <body>
 
-    <!-- Option 1: Bootstrap5 Bundle with Popper -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-        crossorigin="anonymous"></script> -->
-
-
     <section class="nav-bar">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="dashboard.html">Career Counselling</a>
+                <a class="navbar-brand text-light" href="dashboard.html">Career Counselling</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -58,6 +45,7 @@
                                 href="dashboard.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="#courses">Courses</a></li>
                         <li class="nav-item"><a class="nav-link" href="#jobs">Jobs</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#about-us">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                         <!-- <li class="nav-item">
                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
@@ -79,7 +67,7 @@
     </section>
 
     <!-- -------------courses section------------ -->
-    <section class="container-fluid" id="courses">
+    <section class="container" id="courses">
         <h1>Courses</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis praesentium tenetur molestias aliquam
             quo adipisci?</p>
@@ -87,7 +75,7 @@
     </section>
 
     <!-- -------------jobs section------------ -->
-    <section class="container-fluid" id="jobs">
+    <section class="container" id="jobs">
         <h1>Jobs</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis praesentium tenetur molestias aliquam
             quo adipisci?</p>
@@ -97,7 +85,7 @@
 
 
     <!-- ------------About Us------------- -->
-    <section class="about-us">
+    <section id="about-us">
         <div class="container">
             <h1 class="text-center text-primary">About Us</h1>
             <p class="text-center">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi est possimus
@@ -105,20 +93,8 @@
             <div class="row">
                 <div class="col-md-4 text-center">
                     <div class="profile">
-                        <img src="img/nomi.jpeg" class="user" alt="">
-                        <blockquote>I'm Graduate BS-IT and also Front-End Developer using HTML, CSS, JavaScript, Bootstrap 5 and Jquery.</blockquote>
-                        <h3>Muhammad Naeem Abbas: <span>Front-End</span></h3>
-
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-instagram"></i></a>
-
-                    </div>
-                </div>
-                <div class="col-md-4 text-center">
-                    <div class="profile">
                         <img src="img/umer.png" class="user" alt="">
-                        <blockquote>I'm Graduate BS-IT and also Back-End Developer using Python (jengo linrary).</blockquote>
+                        <p>I'm Graduate BS-IT and also Back-End Developer using Python (jengo linrary).</p>
                         <h3>Umar QayYum: <span>Back-End Work</span></h3>
 
                         <a href="#"><i class="fa fa-facebook"></i></a>
@@ -129,8 +105,20 @@
                 </div>
                 <div class="col-md-4 text-center">
                     <div class="profile">
+                        <img src="img/nomi.jpeg" class="user" alt="">
+                        <p>I'm Graduate BS-IT and also Front-End Developer using HTML, CSS, JavaScript, Bootstrap 5 and Jquery.</p>
+                        <h3>Muhammad Naeem Abbas: <span>Front-End</span></h3>
+
+                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-instagram"></i></a>
+
+                    </div>
+                </div>
+                <div class="col-md-4 text-center">
+                    <div class="profile">
                         <img src="img/nisar.jpeg" class="user" alt="">
-                        <blockquote>I'm Graduate BS-IT and also IOS Developer using Flutter. </blockquote>
+                        <p>I'm Graduate BS-IT and also IOS Developer using Flutter.</p>
                         <h3>Nisar QayYum: <span>IOS Developer</span></h3>
 
                         <a href="#"><i class="fa fa-facebook"></i></a>
