--- a/dashboard.html
+++ b/dashboard.html
@@ -63,16 +63,27 @@
         <h1>Career Counselling</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis praesentium tenetur molestias aliquam
             quo adipisci?</p>
-        <button class="btn btn-outline-primary btn-lg" type="submit">Join Us</button>
+        <button onclick="visitloginpage()" class="btn btn-primary btn-lg"  type="submit">Join Us</button>
     </section>
+    <script>
+        function visitloginpage() {
+            location.href="login form.html"
+        }
+    </script>
 
     <!-- -------------courses section------------ -->
     <section class="container" id="courses">
         <h1>Courses</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis praesentium tenetur molestias aliquam
             quo adipisci?</p>
-        <input type="text" placeholder="Search Courses...">
+        <input type="text" placeholder="Courses">
+        <button onclick="visitloginpage()" class="btn btn-primary btn-lg" type="submit">Search</button>
     </section>
+    <script>
+        function visitloginpage() {
+            location.href="login form.html"
+        }
+    </script>
 
     <!-- -------------jobs section------------ -->
     <section class="container" id="jobs">
@@ -80,7 +91,13 @@
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis praesentium tenetur molestias aliquam
             quo adipisci?</p>
         <input type="text" placeholder="Search Jobs...">
+        <button onclick="visitloginpage()" class="btn btn-primary btn-lg" type="submit">Search</button>
     </section>
+    <script>
+        function visitloginpage() {
+            location.href="login form.html"
+        }
+    </script>
 
 
 
