--- a/login form.html
+++ b/login form.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Career Counselling</title>
     <link rel="stylesheet" href="dashboard.css">
-    <link rel="stylesheet" href="login and signup.css">
+    <link rel="stylesheet" href="login form.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- Latest compiled and minified CSS -->
@@ -73,8 +73,8 @@
                         </label>
                     </div>
                     <button type="submit" class="btn btn-primary btn-block">Login</button>
-                    <a href="#">Forgot Password</a>
-                    <a href="#">Create your Account or SignUp</a>
+                    <a href="forgot password.html">Forgot Password</a>
+                    <a href="signup form.html">Create your Account or SignUp</a>
                     <a href="#">SignUp As a Teacher</a>
                 </form>
             </div>
