--- a/signup form.html
+++ b/signup form.html
@@ -73,12 +73,8 @@
                     <div class="form-group">
                         <input type="password" class="form-control" id="pswd" placeholder="Enter Your Password">
                     </div>
-                    <div class="form-group form-check">
-                        <label class="form-check-lable">
-                            <input type="checkbox" class="form-check-input" name="remember"> Remember me?
-                        </label>
-                    </div>
-                    <button type="submit" class="btn btn-primary btn-block">Sign Up</button>
+                    <button type="submit" class="btn btn-primary btn-block mb-2">Sign Up</button>
+                    <a href="login form.html">Back to LOGIN</a>
                     <a href="#">SignUp As a Teacher</a>
                 </form>
             </div>
