--- a/forgot password.html
+++ b/forgot password.html
@@ -70,10 +70,18 @@
             <div class="card-body">
                 <div class="form-group"> <label for="email-for-pass">Enter your email address</label> <input class="form-control" type="text" id="email-for-pass" required=""></div>
             </div>
-            <div class="card-footer"> <button class="btn btn-success" type="submit">Get New Password</button> <button class="btn btn-danger" type="submit">Back to Login</button> </div>
+            <div class="card-footer"> 
+            <button class="btn btn-success" type="submit">Get New Password</button> 
+            <button onclick="backtologin()" class="btn btn-danger" type="submit">Back to Login</button> </div>
         </div>
     </section>
 
+    <!-- Back to Login Form button in  use JavaScript -->
+    <script>
+        function backtologin() {
+            location.href="login form.html"
+        }
+    </script>
 
 
     <!-- ------------About Us------------- -->
