--- a/confrm password.html
+++ b/confrm password.html
@@ -54,21 +54,18 @@
             </div>
         </nav>
     </section>
-    <section class="login-signup">
-        <div class="login-box">
+    <section class="confirm-pswd">
+        <div class="confirm-pswd-box">
             <h2>Confirm Password</h2>
-            <div class="card-body">
-                <div class="form-group">
-                    <label>New Password</label>
-                    <input type="password" class="form-control">
-                </div>
-                <div class="form-group">
-                    <label>Confirm password</label>
-                    <input type="password" class="form-control">
-                </div>
+            <div class="form-group">
+                <label>New Password</label>
+                <input type="password" class="form-control">
             </div>
-            <div class="card-footer"> <button class="btn btn-success" type="submit">Submit</button>
+            <div class="form-group">
+                <label>Confirm password</label>
+                <input type="password" class="form-control">
             </div>
+            <button class="btn btn-success" type="submit">Submit</button>
         </div>
     </section>
 
