--- a/forgot password.html
+++ b/forgot password.html
@@ -56,8 +56,8 @@
             </div>
         </nav>
     </section>
-    <section class="login-signup">
-        <div class="login-box">
+    <section class="forgot-pswd">
+        <div class="forgot-pswd-box">
             <div class="forgot">
                 <h2>Forgot your password?</h2>
                 <p>Change your password in three easy steps. This will help you to secure your password!</p>
@@ -70,10 +70,9 @@
             <div class="card-body">
                 <div class="form-group"> <label for="email-for-pass">Enter your email address</label> <input class="form-control" type="text" id="email-for-pass" required=""></div>
             </div>
-            <div class="card-footer"> 
             <button class="btn btn-success" type="submit">Get New Password</button> 
             <button onclick="backtologin()" class="btn btn-danger" type="submit">Back to Login</button> </div>
-        </div>
+        
     </section>
 
     <!-- Back to Login Form button in  use JavaScript -->
