--- a/signup form.html
+++ b/signup form.html
@@ -57,8 +57,8 @@
         </nav>
     </section>
     <section class="login-signup">
-        <div class="login-box">
-            <div class="login-text">
+        <div class="signup-box">
+            <div class="signup-text">
                 <h2>Sign Up</h2>
                 <form action="">
                     <div class="form-group">
