--- a/signup form.html
+++ b/signup form.html
@@ -75,7 +75,7 @@
                     </div>
                     <button type="submit" class="btn btn-primary btn-block mb-2">Sign Up</button>
                     <a href="login form.html">Back to LOGIN</a>
-                    <a href="#">SignUp As a Teacher</a>
+                    <a href="signup as a tchr.html">SignUp As a Teacher</a>
                 </form>
             </div>
         </div>
