--- a/Expert Level courses.html
+++ b/Expert Level courses.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Career Coach</title>
-    <link rel="stylesheet" href="std dashboard.css">
+    <link rel="stylesheet" href="Expert Level courses.css">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -40,7 +40,7 @@
         <!-- -------part-2 sidebar-navlink-start----------- -->
         <ul class="nav-links">
             <li>
-                <a href="#" class="active">
+                <a href="#">
                     <i class='bx bx-grid-alt'></i>
                     <span class="links_name">Recommended Course</span>
                 </a>
@@ -58,7 +58,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="#" class="active">
                     <i class='bx bx-play'></i>
                     <span class="links_name">Expert Courses</span>
                 </a>
@@ -115,7 +115,7 @@
         <nav>
             <div class="sidebar-button">
                 <i class='bx bx-menu sidebarBtn'></i>
-                <span class="dashboard">Recommended Course</span>
+                <span class="dashboard">Expert Courses</span>
             </div>
             <div class="search-box">
                 <input type="text" placeholder="Search...">
@@ -134,9 +134,11 @@
         <div class="home-content">
             <!-- --------------------------------Recommended Course section StART------------- -->
             <!-- ------------------------------------bigg-level course section-start----- -->
-            <div class="rec-course">
-                <h3>What to Learn Courses</h3>
-                <h5>Recommended For You <a href="#" class="course-level">Beginner Level</a> </h5>
+            <div class="beginner-course">
+                <h3>Expert Level Courses</h3>
+            </div>
+            <div class="course-overviw">
+                <h4 style="margin-left: 10px;">Top Courses in Web Development</h4>
             </div>
             <div class="row course-width">
                 <div class="col-md ml-2 pb-2">
@@ -199,9 +201,8 @@
 
             <hr style="border: 1px solid gray; margin:10px;">
             <!-- --------------------------------intermediate level course section start-------------- -->
-            <div class="rec-course">
-                <h3>What to Learn Courses</h3>
-                <h5>Recommended For You <a href="#" class="course-level">Intermediate Level</a></h5>
+            <div class="course-overviw">
+                <h4 style="margin-left: 10px;">Top Courses in Web Development</h4>
             </div>
             <div class="row course-width">
                 <div class="col-md ml-2 pb-2">
@@ -264,9 +265,134 @@
 
             <hr style="border: 1px solid gray; margin: 10px;">
             <!-- --------------------------------expert level course section start-------------- -->
-            <div class="rec-course">
-                <h3>What to Learn Courses</h3>
-                <h5>Recommended For You <a href="#" class="course-level">Expert Level</a></h5>
+            <div class="course-overviw">
+                <h4 style="margin-left: 10px;">Top Courses in Web Development</h4>
+            </div>
+            <div class="row course-width">
+                <div class="col-md ml-2 pb-2">
+                    <div class="card" style="width: auto; margin: auto;">
+                        <div class="card-img"><img class="card-img-top" src="img/nomi.jpeg" alt=""></div>
+                        <div class="card-body">
+                            <div class="card-title">graphic designing</div>
+                            <div class="card-text">Lorem ipsum dolor sit amet.</div>
+                            <div class="card-price">$11.99</div>
+                            <a href="#" class="btn btn-primary mt-2">How Apply</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="card">
+                        <div class="card-img"><img class="card-img-top" src="img/umer.png" alt=""></div>
+                        <div class="card-body">
+                            <div class="card-title">graphic designing</div>
+                            <div class="card-text">Lorem ipsum dolor sit amet.</div>
+                            <div class="card-price">$11.99</div>
+                            <a href="#" class="btn btn-primary mt-2">How Apply</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="card">
+                        <div class="card-img"><img class="card-img-top" src="img/nisar.jpeg" alt=""></div>
+                        <div class="card-body">
+                            <div class="card-title">graphic designing</div>
+                            <div class="card-text">Lorem ipsum dolor sit amet.</div>
+                            <div class="card-price">$11.99</div>
+                            <a href="#" class="btn btn-primary mt-2">How Apply</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="card">
+                        <div class="card-img"><img class="card-img-top" src="img/nomi.jpeg" alt=""></div>
+                        <div class="card-body">
+                            <div class="card-title">graphic designing</div>
+                            <div class="card-text">Lorem ipsum dolor sit amet.</div>
+                            <div class="card-price">$11.99</div>
+                            <a href="#" class="btn btn-primary mt-2">How Apply</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="card">
+                        <div class="card-img"><img class="card-img-top" src="img/umer.png" alt=""></div>
+                        <div class="card-body">
+                            <div class="card-title">graphic designing</div>
+                            <div class="card-text">Lorem ipsum dolor sit amet.</div>
+                            <div class="card-price">$11.99</div>
+                            <a href="#" class="btn btn-primary mt-2">How Apply</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <hr style="border: 1px solid gray; margin: 10px;">
+
+            <div class="course-overviw">
+                <h4 style="margin-left: 10px;">Top Courses in Web Development</h4>
+            </div>
+            <div class="row course-width">
+                <div class="col-md ml-2 pb-2">
+                    <div class="card" style="width: auto; margin: auto;">
+                        <div class="card-img"><img class="card-img-top" src="img/nomi.jpeg" alt=""></div>
+                        <div class="card-body">
+                            <div class="card-title">graphic designing</div>
+                            <div class="card-text">Lorem ipsum dolor sit amet.</div>
+                            <div class="card-price">$11.99</div>
+                            <a href="#" class="btn btn-primary mt-2">How Apply</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="card">
+                        <div class="card-img"><img class="card-img-top" src="img/umer.png" alt=""></div>
+                        <div class="card-body">
+                            <div class="card-title">graphic designing</div>
+                            <div class="card-text">Lorem ipsum dolor sit amet.</div>
+                            <div class="card-price">$11.99</div>
+                            <a href="#" class="btn btn-primary mt-2">How Apply</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="card">
+                        <div class="card-img"><img class="card-img-top" src="img/nisar.jpeg" alt=""></div>
+                        <div class="card-body">
+                            <div class="card-title">graphic designing</div>
+                            <div class="card-text">Lorem ipsum dolor sit amet.</div>
+                            <div class="card-price">$11.99</div>
+                            <a href="#" class="btn btn-primary mt-2">How Apply</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="card">
+                        <div class="card-img"><img class="card-img-top" src="img/nomi.jpeg" alt=""></div>
+                        <div class="card-body">
+                            <div class="card-title">graphic designing</div>
+                            <div class="card-text">Lorem ipsum dolor sit amet.</div>
+                            <div class="card-price">$11.99</div>
+                            <a href="#" class="btn btn-primary mt-2">How Apply</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="card">
+                        <div class="card-img"><img class="card-img-top" src="img/umer.png" alt=""></div>
+                        <div class="card-body">
+                            <div class="card-title">graphic designing</div>
+                            <div class="card-text">Lorem ipsum dolor sit amet.</div>
+                            <div class="card-price">$11.99</div>
+                            <a href="#" class="btn btn-primary mt-2">How Apply</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <hr style="border: 1px solid gray; margin: 10px;">
+
+            <div class="course-overviw">
+                <h4 style="margin-left: 10px;">Top Courses in Web Development</h4>
             </div>
             <div class="row course-width">
                 <div class="col-md ml-2 pb-2">
@@ -328,174 +454,6 @@
 
             <!-- --------------------------------Recommended Course section END------------- -->
 
-
-
-
-
-
-            <div class="overview-boxes">
-                <div class="box">
-                    <div class="right-side">
-                        <div class="box-topic">Total Order</div>
-                        <div class="number">40,876</div>
-                        <div class="indicator">
-                            <i class='bx bx-up-arrow-alt'></i>
-                            <span class="text">Up from yesterday</span>
-                        </div>
-                    </div>
-                    <i class='bx bx-cart-alt cart'></i>
-                </div>
-                <div class="box">
-                    <div class="right-side">
-                        <div class="box-topic">Total Sales</div>
-                        <div class="number">38,876</div>
-                        <div class="indicator">
-                            <i class='bx bx-up-arrow-alt'></i>
-                            <span class="text">Up from yesterday</span>
-                        </div>
-                    </div>
-                    <i class='bx bxs-cart-add cart two'></i>
-                </div>
-                <div class="box">
-                    <div class="right-side">
-                        <div class="box-topic">Total Profit</div>
-                        <div class="number">$12,876</div>
-                        <div class="indicator">
-                            <i class='bx bx-up-arrow-alt'></i>
-                            <span class="text">Up from yesterday</span>
-                        </div>
-                    </div>
-                    <i class='bx bx-cart cart three'></i>
-                </div>
-                <div class="box">
-                    <div class="right-side">
-                        <div class="box-topic">Total Return</div>
-                        <div class="number">11,086</div>
-                        <div class="indicator">
-                            <i class='bx bx-down-arrow-alt down'></i>
-                            <span class="text">Down From Today</span>
-                        </div>
-                    </div>
-                    <i class='bx bxs-cart-download cart four'></i>
-                </div>
-            </div>
-
-            <div class="sales-boxes">
-                <div class="recent-sales box">
-                    <div class="title">Recent Sales</div>
-                    <div class="sales-details">
-                        <ul class="details">
-                            <li class="topic">Date</li>
-                            <li><a href="#">02 Jan 2021</a></li>
-                            <li><a href="#">02 Jan 2021</a></li>
-                            <li><a href="#">02 Jan 2021</a></li>
-                            <li><a href="#">02 Jan 2021</a></li>
-                            <li><a href="#">02 Jan 2021</a></li>
-                            <li><a href="#">02 Jan 2021</a></li>
-                            <li><a href="#">02 Jan 2021</a></li>
-                        </ul>
-                        <ul class="details">
-                            <li class="topic">Customer</li>
-                            <li><a href="#">Alex Doe</a></li>
-                            <li><a href="#">David Mart</a></li>
-                            <li><a href="#">Roe Parter</a></li>
-                            <li><a href="#">Diana Penty</a></li>
-                            <li><a href="#">Martin Paw</a></li>
-                            <li><a href="#">Doe Alex</a></li>
-                            <li><a href="#">Aiana Lexa</a></li>
-                            <li><a href="#">Rexel Mags</a></li>
-                            <li><a href="#">Tiana Loths</a></li>
-                        </ul>
-                        <ul class="details">
-                            <li class="topic">Sales</li>
-                            <li><a href="#">Delivered</a></li>
-                            <li><a href="#">Pending</a></li>
-                            <li><a href="#">Returned</a></li>
-                            <li><a href="#">Delivered</a></li>
-                            <li><a href="#">Pending</a></li>
-                            <li><a href="#">Returned</a></li>
-                            <li><a href="#">Delivered</a></li>
-                            <li><a href="#">Pending</a></li>
-                            <li><a href="#">Delivered</a></li>
-                        </ul>
-                        <ul class="details">
-                            <li class="topic">Total</li>
-                            <li><a href="#">$204.98</a></li>
-                            <li><a href="#">$24.55</a></li>
-                            <li><a href="#">$25.88</a></li>
-                            <li><a href="#">$170.66</a></li>
-                            <li><a href="#">$56.56</a></li>
-                            <li><a href="#">$44.95</a></li>
-                            <li><a href="#">$67.33</a></li>
-                            <li><a href="#">$23.53</a></li>
-                            <li><a href="#">$46.52</a></li>
-                        </ul>
-                    </div>
-                    <div class="button">
-                        <a href="#">See All</a>
-                    </div>
-                </div>
-                <div class="top-sales box">
-                    <div class="title">Top Seling Product</div>
-                    <ul class="top-sales-details">
-                        <li>
-                            <a href="#">
-                                <!--<img src="images/sunglasses.jpg" alt="">-->
-                                <span class="product">Vuitton Sunglasses</span>
-                            </a>
-                            <span class="price">$1107</span>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <!--<img src="images/jeans.jpg" alt="">-->
-                                <span class="product">Hourglass Jeans </span>
-                            </a>
-                            <span class="price">$1567</span>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <!-- <img src="images/nike.jpg" alt="">-->
-                                <span class="product">Nike Sport Shoe</span>
-                            </a>
-                            <span class="price">$1234</span>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <!--<img src="images/scarves.jpg" alt="">-->
-                                <span class="product">Hermes Silk Scarves.</span>
-                            </a>
-                            <span class="price">$2312</span>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <!--<img src="images/blueBag.jpg" alt="">-->
-                                <span class="product">Succi Ladies Bag</span>
-                            </a>
-                            <span class="price">$1456</span>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <!--<img src="images/bag.jpg" alt="">-->
-                                <span class="product">Gucci Womens's Bags</span>
-                            </a>
-                            <span class="price">$2345</span>
-                        <li>
-                            <a href="#">
-                                <!--<img src="images/addidas.jpg" alt="">-->
-                                <span class="product">Addidas Running Shoe</span>
-                            </a>
-                            <span class="price">$2345</span>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <!--<img src="images/shirt.jpg" alt="">-->
-                                <span class="product">Bilack Wear's Shirt</span>
-                            </a>
-                            <span class="price">$1245</span>
-                        </li>
-                    </ul>
-                </div>
-            </div>
         </div>
     </section>
 
