--- a/Recommended Course.html
+++ b/Recommended Course.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Career Coach</title>
-    <link rel="stylesheet" href="std dashboard.css">
+    <link rel="stylesheet" href="Recommended Course.css">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -40,37 +40,37 @@
         <!-- -------part-2 sidebar-navlink-start----------- -->
         <ul class="nav-links">
             <li>
-                <a href="#" class="active">
+                <a href="Recommended Course.html" class="active">
                     <i class='bx bx-grid-alt'></i>
                     <span class="links_name">Recommended Course</span>
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="Beginner level courses.html">
                     <i class='bx bx-play'></i>
                     <span class="links_name">Beginner Courses</span>
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="intermediate level courses.html">
                     <i class='bx bx-play'></i>
                     <span class="links_name">Intermediate Courses</span>
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="Expert Level courses.html">
                     <i class='bx bx-play'></i>
                     <span class="links_name">Expert Courses</span>
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="my learning.html">
                     <i class='bx bxs-videos'></i>
                     <span class="links_name">My Learning</span>
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="My Cart.html">
                     <i class='bx bx-heart'></i>
                     <span class="links_name">Add To Cart</span>
                 </a>
@@ -78,7 +78,7 @@
             <li>
                 <a href="#">
                     <i class='bx bxs-bell-ring'></i>
-                    <span class="links_name">Notifications</span>
+                    <span class="links_name" data-toggle="modal" data-target="#exampleModalLong">Notifications</span>
                 </a>
             </li>
             <li>
@@ -328,176 +328,57 @@
 
             <!-- --------------------------------Recommended Course section END------------- -->
 
-
-
-
-
-
-            <div class="overview-boxes">
-                <div class="box">
-                    <div class="right-side">
-                        <div class="box-topic">Total Order</div>
-                        <div class="number">40,876</div>
-                        <div class="indicator">
-                            <i class='bx bx-up-arrow-alt'></i>
-                            <span class="text">Up from yesterday</span>
-                        </div>
-                    </div>
-                    <i class='bx bx-cart-alt cart'></i>
-                </div>
-                <div class="box">
-                    <div class="right-side">
-                        <div class="box-topic">Total Sales</div>
-                        <div class="number">38,876</div>
-                        <div class="indicator">
-                            <i class='bx bx-up-arrow-alt'></i>
-                            <span class="text">Up from yesterday</span>
-                        </div>
-                    </div>
-                    <i class='bx bxs-cart-add cart two'></i>
-                </div>
-                <div class="box">
-                    <div class="right-side">
-                        <div class="box-topic">Total Profit</div>
-                        <div class="number">$12,876</div>
-                        <div class="indicator">
-                            <i class='bx bx-up-arrow-alt'></i>
-                            <span class="text">Up from yesterday</span>
-                        </div>
-                    </div>
-                    <i class='bx bx-cart cart three'></i>
-                </div>
-                <div class="box">
-                    <div class="right-side">
-                        <div class="box-topic">Total Return</div>
-                        <div class="number">11,086</div>
-                        <div class="indicator">
-                            <i class='bx bx-down-arrow-alt down'></i>
-                            <span class="text">Down From Today</span>
-                        </div>
-                    </div>
-                    <i class='bx bxs-cart-download cart four'></i>
-                </div>
-            </div>
-
-            <div class="sales-boxes">
-                <div class="recent-sales box">
-                    <div class="title">Recent Sales</div>
-                    <div class="sales-details">
-                        <ul class="details">
-                            <li class="topic">Date</li>
-                            <li><a href="#">02 Jan 2021</a></li>
-                            <li><a href="#">02 Jan 2021</a></li>
-                            <li><a href="#">02 Jan 2021</a></li>
-                            <li><a href="#">02 Jan 2021</a></li>
-                            <li><a href="#">02 Jan 2021</a></li>
-                            <li><a href="#">02 Jan 2021</a></li>
-                            <li><a href="#">02 Jan 2021</a></li>
-                        </ul>
-                        <ul class="details">
-                            <li class="topic">Customer</li>
-                            <li><a href="#">Alex Doe</a></li>
-                            <li><a href="#">David Mart</a></li>
-                            <li><a href="#">Roe Parter</a></li>
-                            <li><a href="#">Diana Penty</a></li>
-                            <li><a href="#">Martin Paw</a></li>
-                            <li><a href="#">Doe Alex</a></li>
-                            <li><a href="#">Aiana Lexa</a></li>
-                            <li><a href="#">Rexel Mags</a></li>
-                            <li><a href="#">Tiana Loths</a></li>
-                        </ul>
-                        <ul class="details">
-                            <li class="topic">Sales</li>
-                            <li><a href="#">Delivered</a></li>
-                            <li><a href="#">Pending</a></li>
-                            <li><a href="#">Returned</a></li>
-                            <li><a href="#">Delivered</a></li>
-                            <li><a href="#">Pending</a></li>
-                            <li><a href="#">Returned</a></li>
-                            <li><a href="#">Delivered</a></li>
-                            <li><a href="#">Pending</a></li>
-                            <li><a href="#">Delivered</a></li>
-                        </ul>
-                        <ul class="details">
-                            <li class="topic">Total</li>
-                            <li><a href="#">$204.98</a></li>
-                            <li><a href="#">$24.55</a></li>
-                            <li><a href="#">$25.88</a></li>
-                            <li><a href="#">$170.66</a></li>
-                            <li><a href="#">$56.56</a></li>
-                            <li><a href="#">$44.95</a></li>
-                            <li><a href="#">$67.33</a></li>
-                            <li><a href="#">$23.53</a></li>
-                            <li><a href="#">$46.52</a></li>
-                        </ul>
-                    </div>
-                    <div class="button">
-                        <a href="#">See All</a>
-                    </div>
-                </div>
-                <div class="top-sales box">
-                    <div class="title">Top Seling Product</div>
-                    <ul class="top-sales-details">
-                        <li>
-                            <a href="#">
-                                <!--<img src="images/sunglasses.jpg" alt="">-->
-                                <span class="product">Vuitton Sunglasses</span>
-                            </a>
-                            <span class="price">$1107</span>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <!--<img src="images/jeans.jpg" alt="">-->
-                                <span class="product">Hourglass Jeans </span>
-                            </a>
-                            <span class="price">$1567</span>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <!-- <img src="images/nike.jpg" alt="">-->
-                                <span class="product">Nike Sport Shoe</span>
-                            </a>
-                            <span class="price">$1234</span>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <!--<img src="images/scarves.jpg" alt="">-->
-                                <span class="product">Hermes Silk Scarves.</span>
-                            </a>
-                            <span class="price">$2312</span>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <!--<img src="images/blueBag.jpg" alt="">-->
-                                <span class="product">Succi Ladies Bag</span>
-                            </a>
-                            <span class="price">$1456</span>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <!--<img src="images/bag.jpg" alt="">-->
-                                <span class="product">Gucci Womens's Bags</span>
-                            </a>
-                            <span class="price">$2345</span>
-                        <li>
-                            <a href="#">
-                                <!--<img src="images/addidas.jpg" alt="">-->
-                                <span class="product">Addidas Running Shoe</span>
-                            </a>
-                            <span class="price">$2345</span>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <!--<img src="images/shirt.jpg" alt="">-->
-                                <span class="product">Bilack Wear's Shirt</span>
-                            </a>
-                            <span class="price">$1245</span>
-                        </li>
-                    </ul>
-                </div>
-            </div>
         </div>
     </section>
+
+
+    <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog"
+                aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLongTitle">Notifications</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="media border p-1 m-1">
+                                <a href="https://www.udemy.com/user/view-notifications/" target="_blank">
+                                <img src="img/umer.png" alt="John Doe" class="rounded-circle mr-1" style="width:50px;">
+                                <div class="media-body">
+                                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, maxime!</p>
+                                </a>
+                                </div>
+                            </div>
+                            <div class="media border p-1 m-1">
+                                <a href="#">
+                                <img src="img/umer.png" alt="John Doe" class="rounded-circle mr-1" style="width:50px;">
+                                <div class="media-body">
+                                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, maxime!</p>
+                                </a>
+                                </div>
+                            </div>
+                            <div class="media border p-1 m-1">
+                                <a href="#">
+                                <img src="img/umer.png" alt="John Doe" class="rounded-circle mr-1" style="width:50px;">
+                                <div class="media-body">
+                                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, maxime!</p>
+                                </a>  
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-outline-primary">Mark all as Read</button>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+    
+    
 
     <script>
         let sidebar = document.querySelector(".sidebar");
